# syft-job

./: .gitignore  README.md  example_usage.py  pyproject.toml  quick_test.py  test_custom_script.py
notebooks/: syft_job_examples.ipynb  test_syft_job.ipynb  testing.ipynb
notebooks/e2e/: do.ipynb  ds.ipynb
notebooks/e2e-python/: do.ipynb  ds.ipynb
src/syft_job/: __init__.py  client.py  config.py  job_runner.py  models.py  runner.py  runner_main.py  submission.py
