[project]
name = "syft-job"
version = "0.1.0"
description = "A generic job submission system for data science workflows with syft:// URL support"
readme = "README.md"
authors = [
    { name = "rasswanth-s", email = "43314053+rasswanth-s@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pyyaml>=6.0",
]

[project.scripts]
syft-job = "syft_job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
