[project]
name = "syft-job"
version = "0.1.0"
description = "A generic job submission system for data science workflows with syft:// URL support"
readme = "README.md"
authors = [
    { name = "rasswanth-s", email = "43314053+rasswanth-s@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0",
    "syft-core>=0.2.8",
]

[project.scripts]
syft-job = "syft_job:main"
syft-job-runner = "syft_job.runner_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
